starlark_syntax/src/syntax/grammar_tests/error_integer_literal.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
x = 01

Error:
error: Parse error: integer cannot have leading 0, got `01`
 --> error_integer_literal:1:5
  |
1 | x = 01
  |     ^^
  |


Program:
x = 0123

Error:
error: Parse error: integer cannot have leading 0, got `0123`
 --> error_integer_literal:1:5
  |
1 | x = 0123
  |     ^^^^
  |
